// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FaceLabelingMessage /> should render properly when a training job just finished 1`] = `
.emotion-2 {
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-0 a {
  color: #009f22;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <svg
      color="#009f22"
      data-file-name="checkmark.svg"
      height={20}
    />
    <div
      className="emotion-0"
      role="alert"
    >
      Face training complete.
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingMessage /> should render properly when a training job just started 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-3 {
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-1 a {
  color: #0074f5;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <svg
      className="emotion-0"
      color="#0074f5"
      data-file-name="generating.svg"
      height={20}
    />
    <div
      className="emotion-1"
      role="alert"
    >
      Face training in progress.
       
      <a
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1a1d45af-7477-1396-ae57-a618e8efb91f"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Check Status
      </a>
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingMessage /> should render properly when there is an error 1`] = `
.emotion-2 {
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-0 a {
  color: #c92300;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <svg
      color="#c92300"
      data-file-name="warning.svg"
      height={20}
    />
    <div
      className="emotion-0"
      role="alert"
    >
      Error
    </div>
  </div>
</div>
`;
